# markov-gen

./: LICENSE  README.md  markov-gen.cabal
app/: Main.hs
src/: Markovgen.hs
test/: Spec.hs  othello.txt
