name:                markov-gen
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/liu916/markov-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Liu
maintainer:          liu916@gmail.com
copyright:           2016 Anthony Liu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Markovgen
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , mtl
                     , random-fu
  default-language:    Haskell2010

test-suite markov-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markov-gen
                     , text
                     , containers
                     , random-fu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/liu916/markov-gen
